--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Muneeb-F.github.io/",
+  "homepage": "https://muneeb-f.github.io/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
